##Text encoding: utf-8

2011-05-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: make m_Color a settable property.
	* libs/gccv/canvas.h: ditto.
	* libs/gccv/line.cc: use auto color when needed.
	* libs/gccv/rectangle.cc: ditto.
	* libs/gcp/application.cc: build icons from canvas when provided.
	* libs/gcp/application.h: ditto.
	* plugins/paint/arrows/plugin.cc: ditto.
	* plugins/paint/bonds/plugin.cc: ditto.
	* plugins/paint/cycles/plugin.cc: ditto.
	* plugins/paint/selection/plugin.cc: ditto.
	* plugins/paint/text/plugin.cc: ditto.

2011-05-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: replace expose event by draw event.
	* libs/gcp/application.cc: restore buttons bitmaps, needs work.
	* libs/gcp/tools.cc: use GtkGrid instead of GtkBox.
	* libs/gcp/tools.h: ditto.
	* libs/gcugtk/spectrumdoc.cc: set min and max on loadinf XY..XY values.
	* ui/paint/tools.ui: use GtkGrid instead of GtkBox.

2011-05-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/gcuperiodic.c: make it work again.
	* programs/3d/Makefile.am: make things link again.
	* ui/libgcu/gcuperiodic.ui: fixed labels positions.

2011-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post branching version bump (0.13.4).
	* all files: port to gtk+-3.0.

2011-05-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed make dist.
	* libs/gcu/application.cc: removed obsolete header.
	* tests/Makefile.am: fixed libs.

2011-05-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/space-groups.xml.in: fixed space group P -2yac.
	* libs/gcp/molecule.cc: when loaded, update parent.
	* plugins/paint/selection/group.cc: really support brackets.

2011-05-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: two brackets should not enclose the same objects set.
	* plugins/paint/selection/bracketstool.cc: ditto.

2011-05-03  Jean Bréfort  <jean.brefort@normalesup.org>