@@ -25,11 +25,15 @@
 #include "config.h"
 #include "line-item.h"
 #include "canvas.h"
+#include <cstring>
 
 namespace gccv {
 
 LineItem::LineItem (Canvas *canvas):
 	Item (canvas),
+	m_Dashes (NULL),
+	m_DashesNb (0),
+	m_DashOffset (0.),
 	m_LineWidth (1.),
 	m_LineColor (0),
 	m_AutoColor (false)
@@ -38,6 +42,9 @@ LineItem::LineItem (Canvas *canvas):
 
 LineItem::LineItem (Group *parent, ItemClient *client):
 	Item (parent, client),
+	m_Dashes (NULL),
+	m_DashesNb (0),
+	m_DashOffset (0.),
 	m_LineWidth (1.),
 	m_LineColor (0),
 	m_AutoColor (false)
@@ -51,6 +58,24 @@ LineItem::~LineItem ()
 GOColor LineItem::GetEffectiveLineColor () const
 {
 	return m_AutoColor? GetCanvas ()->GetColor (): m_LineColor;
+}
+
+void LineItem::ApplyLine (cairo_t *cr) const
+{
+	cairo_save (cr);
+	cairo_set_line_width (cr, m_LineWidth);
+	cairo_set_source_rgba (cr, GO_COLOR_TO_CAIRO (m_AutoColor? GetCanvas ()->GetColor (): m_LineColor));
+	if (m_Dashes)
+		cairo_set_dash (cr, m_Dashes, m_DashesNb, m_DashOffset);
+}
+
+void LineItem::SetDashes (double const *dashes, int num_dashes, double offset)
+{
+	m_Dashes = new double [num_dashes];
+	memcpy (m_Dashes, dashes, num_dashes * sizeof (double));
+	m_DashesNb = num_dashes;
+	m_DashOffset = offset;
+	Invalidate ();
 }
 
 }
